aoc/day04/objects/AoC04_Candidate__c/AoC04_Candidate__c.object-meta.xml
<CustomObject>
    <label>AoC04 Candidate</label>
    <nameField>
        <label>AoC04 Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AoC04 Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>