aoc/day04/objects/AoC04_Candidate__c/fields/Advent_of_Code_Problem__c.field-meta.xml
<CustomField>
    <fullName>Advent_of_Code_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advent of Code Problem</label>
    <referenceTo>Advent_of_Code_Problem__c</referenceTo>
    <relationshipLabel>AoC04 Candidates</relationshipLabel>
    <relationshipName>AoC04_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>