aoc/day04/objects/AoC04_Candidate__c/fields/C1__c.field-meta.xml
<CustomField>
    <fullName>C1__c</fullName>
    <formula>VALUE(MID(Name,1,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>