aoc/day04/objects/AoC04_Candidate__c/fields/C2__c.field-meta.xml
<CustomField>
    <fullName>C2__c</fullName>
    <formula>VALUE(MID(Name,2,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>