aoc/day04/objects/AoC04_Candidate__c/fields/C3__c.field-meta.xml
<CustomField>
    <fullName>C3__c</fullName>
    <formula>VALUE(MID(Name,3,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>