aoc/day04/objects/AoC04_Candidate__c/validationRules/Never_decrease.validationRule-meta.xml
<ValidationRule>
    <fullName>Never_decrease</fullName>
    <active>true</active>
    <errorConditionFormula>C1__c &gt; C2__c || C2__c &gt; C3__c || C3__c &gt; C4__c || C4__c &gt; C5__c || C5__c &gt; C6__c</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Number should never decrease</errorMessage>
</ValidationRule>