aoc/day04/objects/AoC04_Candidate__c/validationRules/No_Consecutive_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Consecutive_Number</fullName>
    <active>true</active>
    <errorConditionFormula>C1__c != C2__c &amp;&amp; C2__c != C3__c &amp;&amp; C3__c != C4__c &amp;&amp; C4__c != C5__c &amp;&amp; C5__c != C6__c</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Needs to contain consecutive numbers</errorMessage>
</ValidationRule>